--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,59 +1,28 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.202.5/containers/javascript-node-postgres
-// Update the VARIANT arg in docker-compose.yml to pick a Node.js version
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.202.5/containers/alpine
 {
-	"name": "Node.js & PostgreSQL",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "app",
-	"workspaceFolder": "/workspace",
-
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"sqltools.connections": [{
-			"name": "Container database",
-			"driver": "PostgreSQL",
-			"previewLimit": 50,
-			"server": "localhost",
-			"port": 5432,
-			"database": "postgres",
-			"username": "postgres",
-			"password": "postgres"
-		}]
+	"name": "Debian",
+	"build": {
+		"dockerfile": "Dockerfile",
 	},
+	
+	// Set *default* container specific settings.json values on container create. 
+	"settings": {},
 
 	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"dbaeumer.vscode-eslint",
-		"mtxr.sqltools",
-		"mtxr.sqltools-driver-pg"
-	],
+	// Note that some extensions may not work in Alpine Linux. See https://aka.ms/vscode-remote/linux.
+	"extensions": [],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [3000, 5432],
+	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
+	// "postCreateCommand": "uname -a",
+
+	// Replace when using a ptrace-based debugger like C++, Go, and Rust
+	// "runArgs": [ "--init", "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+	"runArgs": ["--init"],
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node",
-	"features": {
-		"docker-in-docker": "latest",
-		"docker-from-docker": "latest",
-		"kubectl-helm-minikube": "latest",
-		"terraform": "latest",
-		"git": "latest",
-		"github-cli": "latest",
-		"azure-cli": "latest",
-		"sshd": "latest",
-		"desktop-lite": "latest",
-		"homebrew": "latest",
-		"python": "latest",
-		"golang": "latest",
-		"java": "lts",
-		"maven": "latest",
-		"gradle": "latest",
-		"ruby": "latest",
-		"rust": true,
-		"powershell": "latest"
-	}
+	"remoteUser": "codespace"
 }
