--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,8 @@
-FROM mcr.microsoft.com/vscode/devcontainers/universal:1-linux
+FROM debian
 
-# ** [Optional] Uncomment this section to install additional packages. **
-# USER root
-#
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
-#
-# USER codespace
+ARG arg1
+ARG arg2
+ARG arg3
+
+ENV a=b
+ENV c=d
