Add sshd feature

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,9 @@
         }
     },
     "initializeCommand": "touch heythere.txt && printenv > myenv.txt",
+    "features": {
+        "ghcr.io/devcontainers/features/sshd:1": {}
+    },
     "containerEnv": {
         "MY_LOCAL_HOME": "${localEnv:HOME}",
         "A_SIMPLE_KEY": "A_SIMPLE_VALUE"
